tests/NormalTests/paczka1/small_fuzzy/89220538.err
Error in line 2: JRW A782 27,7
Error in line 6: :S187
